manifests/sidecar-injector-0.24.1.tgz-manifest.yaml
---
# Source: sidecar-injector/templates/controlnode.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-controlnode
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7946
      targetPort: 7946
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
---
# Source: sidecar-injector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-sidecar-injector
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
---
# Source: sidecar-injector/templates/controlnode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-controlnode
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sidecar-injector
      app.kubernetes.io/instance: "controlnode"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sidecar-injector
        app.kubernetes.io/instance: "controlnode"
    spec:
      serviceAccountName: my-release-sidecar-injector
      securityContext:
        {}
      containers:
        - name:  controlnode
          securityContext:
            {}
          image: "impartsecurity/control-node:0.24.0"
          imagePullPolicy: IfNotPresent
          args:
          - --gossip_port=7946
          resources:
            {}
          volumeMounts: []
      volumes: []
---
# Source: sidecar-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-sidecar-injector
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  priorityClassName: 
  selector:
    matchLabels:
      app.kubernetes.io/name: sidecar-injector
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/webhook-tls-config: e915ef182145cc53edab00d0d3824d7fd36b7966205c147ab7d1b249972daf94
        checksum/webhook-tls-config-c: d2c22fd63793249bd6ba562e1a45382b4c8bcfae7f33b27f7cb581012834d4d5
        checksum/webhook-tls-config-k: dd2f5abcc7b04a17f265e877c055ee5e8258d7bfd5853071fa1505404c1f1207
        checksum/values: bb824ff1b0e675ef3038e44f339d43f83b32204b909b4ad2c2024d902826e51b
        checksum/webhook-sidecar-config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: sidecar-injector
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-sidecar-injector
      securityContext:
        {}
      containers:
        - name: sidecar-injector
          securityContext:
            {}
          image: "impartsecurity/k8s-webhook-injector:0.24.0"
          imagePullPolicy: IfNotPresent
          args:
          - --sidecar-config-file=/etc/webhook/config/sidecarconfig.yaml
          - --tls-cert-file=/etc/webhook/certs/tls.crt
          - --tls-private-key-file=/etc/webhook/certs/tls.key
          resources:
            {}
          volumeMounts:
          - mountPath: /etc/webhook/config
            name: webhook-config
          - name: certs
            mountPath: /etc/webhook/certs
            readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: my-release-sidecar-injector-webhook-tls
      - configMap:
          name: my-release-sidecar-injector
        name: webhook-config
---
# Source: sidecar-injector/templates/deployment.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-sidecar-injector
webhooks:
  - name: my-release-sidecar-injector.impart.security
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: my-release-sidecar-injector
        namespace: default
        path: /inject
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lRWTFaRVg5ZkNoelgwVnBYeFV3Ums1VEFOQmdrcWhraUc5dzBCQVFzRkFEQVYKTVJNd0VRWURWUVFERXdwa1pXWmhkV3gwTFdOaE1CNFhEVEkwTURZeE5qQXdNakF3TjFvWERUTTBNRFl4TkRBdwpNakF3TjFvd0ZURVRNQkVHQTFVRUF4TUtaR1ZtWVhWc2RDMWpZVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBS2JBbDBaN0Y0akxPVFNhWGNXK0ZkZHpsZTJhYU1JeEEwQm5sQ3d4UVVoZk1paWEKRzlXalJhOHpId3dZSjhUYlM5Kzl6Vmd3WXVUVElhTDZ6OEZGT1E1UFBxdXQwUmtQZ2xaZ1VKUzB2MFBQRDRxZApqcEFlb2ppd1Y4 [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources:
          - pods
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        impart-inspector-injection: enabled
---
# Source: sidecar-injector/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-sidecar-injector-test-connection"
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: nc
      image: busybox
      command: ['sh', '-c']
      args:
        - "nc -zvw 5 my-release-sidecar-injector 443"
  restartPolicy: Never
